--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_ENDPOINT=https://cors-anywhere.herokuapp.com/https://api.codingcoach.io
-REACT_APP_AUTH_DOMAIN=codingcoach.eu.auth0.com
-REACT_APP_AUTH_CLIENT_ID=IxICRc28Q2waSi00bUBp294pAt0RmcRa
-REACT_APP_AUTH_CALLBACK=https://mentors.codingcoach.io
+REACT_APP_AUTH_DOMAIN=dev-5eragblc.auth0.com
+REACT_APP_AUTH_CLIENT_ID=knlCneuUXeAx9nVnWYsDmOP3nAjD9qIq
+REACT_APP_AUTH_CALLBACK=http://localhost:3000/
