--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-REACT_APP_API_ENDPOINT=https://fdsfds.com.br
-# REACT_APP_API_ENDPOINT=https://165.22.186.68
+REACT_APP_API_ENDPOINT=https://165.22.186.68
 REACT_APP_AUTH_DOMAIN=dev-5eragblc.auth0.com
 REACT_APP_AUTH_CLIENT_ID=knlCneuUXeAx9nVnWYsDmOP3nAjD9qIq
 REACT_APP_AUTH_CALLBACK=https://estudando.netlify.com
