--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: yarn install, yarn build
       run: |
-        nyarn install
+        yarn install
         yarn build
       env:
         CI: true
